Adding some codes which were modified during Series and dataframes practice

--- a/Series.ipynb
+++ b/Series.ipynb
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "google.is_unique"
+    "google.is_unique # Checks if all the values inside the Series is unique or not"
    ]
   },
   {
@@ -386,7 +386,7 @@
     }
    ],
    "source": [
-    "pokemon.ndim"
+    "pokemon.ndim # Tells me the number of dimensions which should be 1 in case of Series i think"
    ]
   },
   {
@@ -1175,6 +1175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a custom function to be used with apply later\n",
+    "\n",
     "def classify_performance(number):\n",
     "    if number < 300:\n",
     "        return \"OK\"\n",
@@ -1212,7 +1214,7 @@
     }
    ],
    "source": [
-    "google.apply(classify_performance)"
+    "google.apply(classify_performance) # Apply is very similar to map function in Python"
    ]
   },
   {
@@ -1298,7 +1300,12 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2069,6 +2076,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1222621 , 0.21648947, 0.73022518, 0.933226  , 0.41484224])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generarting a random number series using numpy\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "check = np.random.rand(5)\n",
+    "check"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2095,5 +2127,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
